Closed Bug 1663894 Opened 4 years ago Closed 4 years ago

Perma [tier 2] mingGW /builds/worker/checkouts/gecko/gfx/thebes/DeviceManagerDx.cpp:435:44: error: use of undeclared identifier 'COMPOSITIONOBJECT_ALL_ACCESS'

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- unaffected
firefox81 --- unaffected
firefox82 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: sotaro)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [stockwell needswork:owner])

Attachments

(1 file)

Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=315186073&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/a7yqk5pIQ4ixVy8Yya7dFA/runs/0/artifacts/public/logs/live_backing.log


[task 2020-09-09T09:55:22.268Z] 09:55:22 WARNING - /builds/worker/checkouts/gecko/gfx/angle/checkout/src/compiler/translator/IntermNode.h:916:37: warning: class with destructor marked 'final' cannot be inherited from [-Wfinal-dtor-non-final-class]
[task 2020-09-09T09:55:22.268Z] 09:55:22 INFO - TIntermPreprocessorDirective() final;
[task 2020-09-09T09:55:22.268Z] 09:55:22 INFO - ^
[task 2020-09-09T09:55:22.268Z] 09:55:22 INFO - /builds/worker/checkouts/gecko/gfx/angle/checkout/src/compiler/translator/IntermNode.h:911:7: note: mark 'sh::TIntermPreprocessorDirective' as 'final' to silence this warning
[task 2020-09-09T09:55:22.269Z] 09:55:22 INFO - class TIntermPreprocessorDirective : public TIntermNode
[task 2020-09-09T09:55:22.270Z] 09:55:22 INFO - ^
[task 2020-09-09T09:55:22.270Z] 09:55:22 INFO - 1 warning generated.
[task 2020-09-09T09:55:22.271Z] 09:55:22 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/angle/targets/translator'
[task 2020-09-09T09:55:22.271Z] 09:55:22 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/translator'
[task 2020-09-09T09:55:22.272Z] 09:55:22 INFO - gfx/angle/targets/translator/ArrayBoundsClamper.o
[task 2020-09-09T09:55:22.273Z] 09:55:22 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/angle/targets/translator'
[task 2020-09-09T09:55:22.394Z] 09:55:22 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/vr/service'
[task 2020-09-09T09:55:22.397Z] 09:55:22 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -std=gnu++17 -o OculusSession.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/gfx/vr/service -I/builds/worker/workspace/obj-build/gfx/vr/service -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/gfx/layers/d3d11 -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fexperimental-new-pass-manager -MD -MP -MF .deps/OculusSession.o.pp /builds/worker/checkouts/gecko/gfx/vr/service/OculusSession.cpp
[task 2020-09-09T09:55:22.398Z] 09:55:22 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/vr/service'
[task 2020-09-09T09:55:22.399Z] 09:55:22 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/vr/service'
[task 2020-09-09T09:55:22.399Z] 09:55:22 INFO - gfx/vr/service/OpenVRKnucklesMapper.o
[task 2020-09-09T09:55:22.399Z] 09:55:22 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/vr/service'
[task 2020-09-09T09:55:22.580Z] 09:55:22 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2020-09-09T09:55:22.580Z] 09:55:22 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -std=gnu++17 -o DeviceManagerDx.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DMOZ_ENABLE_D3D10_LAYER -DGRAPHITE2_STATIC -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/gfx/thebes -I/builds/worker/workspace/obj-build/gfx/thebes -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/xml -I/builds/worker/checkouts/gecko/gfx/skia -I/builds/worker/checkouts/gecko/gfx/skia/skia -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -I/builds/worker/workspace/obj-build/dist/include/cairo -fexperimental-new-pass-manager -MD -MP -MF .deps/DeviceManagerDx.o.pp /builds/worker/checkouts/gecko/gfx/thebes/DeviceManagerDx.cpp
[task 2020-09-09T09:55:22.580Z] 09:55:22 WARNING - /builds/worker/checkouts/gecko/gfx/thebes/DeviceManagerDx.cpp:266:42: warning: format specifies type 'int' but the argument has type 'DWORD' (aka 'unsigned long') [-Wformat]
[task 2020-09-09T09:55:22.580Z] 09:55:22 INFO - printf_stderr("Attach to PID: %d\n", GetCurrentProcessId());
[task 2020-09-09T09:55:22.580Z] 09:55:22 INFO - ~~ ^

[task 2020-09-09T09:55:22.580Z] 09:55:22 INFO - %lu
[task 2020-09-09T09:55:22.580Z] 09:55:22 ERROR - /builds/worker/checkouts/gecko/gfx/thebes/DeviceManagerDx.cpp:435:44: error: use of undeclared identifier 'COMPOSITIONOBJECT_ALL_ACCESS'
[task 2020-09-09T09:55:22.580Z] 09:55:22 INFO - HRESULT hr = sDcompCreateSurfaceHandleFn(COMPOSITIONOBJECT_ALL_ACCESS,
[task 2020-09-09T09:55:22.580Z] 09:55:22 INFO - ^
[task 2020-09-09T09:55:22.581Z] 09:55:22 INFO - 1 warning and 1 error generated.
[task 2020-09-09T09:55:22.581Z] 09:55:22 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:725: DeviceManagerDx.o] Error 1
[task 2020-09-09T09:55:22.581Z] 09:55:22 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/thebes'
[task 2020-09-09T09:55:22.581Z] 09:55:22 INFO - make[4]: *** Waiting for unfinished jobs....
[task 2020-09-09T09:55:22.584Z] 09:55:22 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/vr/service'
[task 2020-09-09T09:55:22.585Z] 09:55:22 INFO - gfx/vr/service/OpenVRSession.o
[task 2020-09-09T09:55:22.586Z] 09:55:22 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/vr/service'
[task 2020-09-09T09:55:22.694Z] 09:55:22 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/translator'
[task 2020-09-09T09:55:22.694Z] 09:55:22 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -std=gnu++17 -o ArrayBoundsClamper.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -D__NDK_FPABI__= -DANGLE_SKIP_DXGI_1_2_CHECK -DANGLE_ENABLE_KEYEDMUTEX -DANGLE_ENABLE_ESSL -DANGLE_ENABLE_GLSL -DANGLE_ENABLE_HLSL '-DCR_CLANG_REVISION="n332890-c2443155-1"' -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DNOMINMAX -DNTDDI_VERSION=NTDDI_WIN10_RS2 -DUNICODE -DWINVER=0x0A00 -D_ATL_NO_OPENGL -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_HAS_EXCEPTIONS=0 -D_SCL_SECURE_NO_DEPRECATE -D_SECURE_ATL -D_UNICODE -I/builds/worker/checkouts/gecko/gfx/angle/targets/translator -I/builds/worker/workspace/obj-build/gfx/angle/targets/translator -I/builds/worker/checkouts/gecko/gfx/angle/checkout/include -I/builds/worker/checkouts/gecko/gfx/angle/checkout/out/gen/angle -I/builds/worker/checkouts/gecko/gfx/angle/checkout/src -I/builds/worker/checkouts/gecko/gfx/angle/checkout/src/common/third_party/base -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -mstackrealign -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -msse2 -fexperimental-new-pass-manager -MD -MP -MF .deps/ArrayBoundsClamper.o.pp /builds/worker/checkouts/gecko/gfx/angle/checkout/src/third_party/compiler/ArrayBoundsClamper.cpp
[task 2020-09-09T09:55:22.694Z] 09:55:22 INFO - In file included from /builds/worker/checkouts/gecko/gfx/angle/checkout/src/third_party/compiler/ArrayBoundsClamper.cpp:26:
[task 2020-09-09T09:55:22.694Z] 09:55:22 INFO - In file included from /builds/worker/checkouts/gecko/gfx/angle/checkout/src/third_party/compiler/ArrayBoundsClamper.h:30:
[task 2020-09-09T09:55:22.694Z] 09:55:22 WARNING - /builds/worker/checkouts/gecko/gfx/angle/checkout/src/compiler/translator/IntermNode.h:916:37: warning: class with destructor marked 'final' cannot be inherited from [-Wfinal-dtor-non-final-class]
<...>
[task 2020-09-09T09:56:20.137Z] 09:56:20 WARNING - /builds/worker/checkouts/gecko/gfx/layers/d3d11/TextureD3D11.cpp:1391:30: warning: comparison of integers of different signs: 'UINT' (aka 'unsigned int') and 'int' [-Wsign-compare]
[task 2020-09-09T09:56:20.137Z] 09:56:20 INFO - currentDesc.Height != mSize.height ||
[task 2020-09-09T09:56:20.137Z] 09:56:20 INFO - ~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
[task 2020-09-09T09:56:20.137Z] 09:56:20 INFO - 7 warnings generated.
[task 2020-09-09T09:56:20.137Z] 09:56:20 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/layers'
[task 2020-09-09T09:56:20.137Z] 09:56:20 ERROR - make[2]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:34: compile] Error 2
[task 2020-09-09T09:56:20.138Z] 09:56:20 ERROR - make[1]: *** [/builds/worker/checkouts/gecko/config/rules.mk:384: default] Error 2
[task 2020-09-09T09:56:20.138Z] 09:56:20 INFO - make: *** [client.mk:125: build] Error 2
[task 2020-09-09T09:56:20.138Z] 09:56:20 INFO - 378 compiler warnings present.
[task 2020-09-09T09:56:20.204Z] 09:56:20 INFO - Notification center failed: Install notify-send (usually part of the libnotify package) to get a notification when the build finishes.
[task 2020-09-09T09:56:20.245Z] 09:56:20 ERROR - Return code: 2
[task 2020-09-09T09:56:20.245Z] 09:56:20 WARNING - setting return code to 2
[task 2020-09-09T09:56:20.245Z] 09:56:20 FATAL - 'mach build -v' did not run successfully. Please check log for errors.
[task 2020-09-09T09:56:20.245Z] 09:56:20 FATAL - Running post_fatal callback...
[task 2020-09-09T09:56:20.245Z] 09:56:20 FATAL - Exiting -1

Sotaro, this looks to be caused by the changes in Bug 1460499.
Could you please take a look?

Flags: needinfo?(sotaro.ikeda.g)

Set release status flags based on info from the regressing bug 1460499

(In reply to Alexandru Michis [:malexandru] from comment #1)

Sotaro, this looks to be caused by the changes in Bug 1460499.
Could you please take a look?

It looks similar to Bug 1587469. MinGW build does not support the API.

Assignee: nobody → sotaro.ikeda.g
Status: NEW → ASSIGNED
Blocks: mingw-clang
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: