Bug 1663894 - Fix minGW build failure by Bug 1460499 r=nical

Differential Revision: https://phabricator.services.mozilla.com/D89699