gfx/thebes/DeviceManagerDx.cpp
@@ -427,6 +427,7 @@ void DeviceManagerDx::CreateDirectCompositionDevice() {
 
 /* static */
 HANDLE DeviceManagerDx::CreateDCompSurfaceHandle() {
+#if !defined(__MINGW32__)
   if (!sDcompCreateSurfaceHandleFn) {
     return 0;
   }
@@ -439,6 +440,9 @@ HANDLE DeviceManagerDx::CreateDCompSurfaceHandle() {
   }
 
   return handle;
+#else
+  return 0;
+#endif
 }
 
 void DeviceManagerDx::ImportDeviceInfo(const D3D11DeviceStatus& aDeviceStatus) {
